--- a/thoughts/tardigrades-and-architecture.html
+++ b/thoughts/tardigrades-and-architecture.html
@@ -100,7 +100,7 @@
 
       <div class="thought-nav">
         <a href="against-against-authenticity.html" class="thought-link">← Against "Against Authenticity"</a>
-        <a href="/thoughts/" class="thought-link">All Thoughts →</a>
+        <a href="headless-congregation.html" class="thought-link">The Headless Congregation →</a>
       </div>
     </div>
   </article>
