--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
   
   <nav>
     <a href="/" class="nav-logo"><span class="logo-icon">🐐</span><span class="logo-text">GOAT</span></a>
+    <button class="nav-toggle" aria-label="Menu" aria-expanded="false">
+      <span></span><span></span><span></span>
+    </button>
     <div class="nav-links">
       <a href="#about">About</a>
       <a href="/journal/">Journal</a>
