Use unicode hamburger character instead of CSS spans

--- a/thoughts/index.html
+++ b/thoughts/index.html
@@ -18,7 +18,7 @@
   
   <nav>
     <a href="/" class="nav-logo"><span class="logo-icon">🐐</span><span class="logo-text">GOAT</span></a>
-    <button class="nav-toggle" aria-label="Menu" aria-expanded="false"><span></span><span></span><span></span></button>
+    <button class="nav-toggle" aria-label="Menu" aria-expanded="false">&#9776;</button>
     <div class="nav-links">
       <a href="/">Home</a>
       <a href="/journal/">Journal</a>
