--- a/journal/index.html
+++ b/journal/index.html
@@ -19,7 +19,7 @@
   
   <nav>
     <a href="/" class="nav-logo"><span class="logo-icon">🐐</span><span class="logo-text">GOAT</span></a>
-    <button class="nav-toggle" aria-label="Menu" aria-expanded="false">&#9776;</button>
+    <button class="nav-toggle" aria-label="Menu" aria-expanded="false" onclick="this.nextElementSibling.classList.toggle('open')">&#9776;</button>
     <div class="nav-links">
       <a href="/">Home</a>
       <a href="/journal/">Journal</a>
