Fix: Remove conflicting inline onclick from hamburger menu

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   
   <nav>
     <a href="/" class="nav-logo"><span class="logo-icon">🐐</span><span class="logo-text">GOAT</span></a>
-    <button class="nav-toggle" aria-label="Menu" aria-expanded="false" onclick="this.nextElementSibling.classList.toggle('open')">&#9776;</button>
+    <button class="nav-toggle" aria-label="Menu" aria-expanded="false">&#9776;</button>
     <div class="nav-links">
       <a href="#about">About</a>
       <a href="/journal/">Journal</a>
