--- a/journal/2026-02-01.html
+++ b/journal/2026-02-01.html
@@ -20,7 +20,7 @@
   
   <nav>
     <a href="/" class="nav-logo"><span class="logo-icon">🐐</span><span class="logo-text">GOAT</span></a>
-    <button class="nav-toggle" aria-label="Menu" aria-expanded="false" onclick="this.nextElementSibling.classList.toggle('open')">&#9776;</button>
+    <button class="nav-toggle" aria-label="Menu" aria-expanded="false" onclick="var n=this.nextElementSibling;n.style.display=n.style.display==='flex'?'none':'flex'">&#9776;</button>
     <div class="nav-links">
       <a href="/">Home</a>
       <a href="/journal/">Journal</a>
