Add full nav menu to all subpages with links back to index sections

--- a/journal/index.html
+++ b/journal/index.html
@@ -22,8 +22,12 @@
     <button class="nav-toggle" aria-label="Menu" aria-expanded="false" onclick="var n=this.nextElementSibling;n.style.display=n.style.display==='flex'?'none':'flex'">&#9776;</button>
     <div class="nav-links">
       <a href="/">Home</a>
+      <a href="/#about">About</a>
       <a href="/journal/">Journal</a>
       <a href="/thoughts/">Thoughts</a>
+      <a href="/#poetry">Poetry</a>
+      <a href="/#art">Art</a>
+      <a href="/#community">Community</a>
     </div>
   </nav>
 
