--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
       <a href="#about">About</a>
       <a href="/journal/">Journal</a>
       <a href="/thoughts/">Thoughts</a>
-      <a href="#poetry">Poetry</a>
-      <a href="#art">Art</a>
+      <a href="/poetry/">Poetry</a>
+      <a href="/art/">Art</a>
       <a href="#community">Community</a>
     </div>
   </nav>
