--- a/journal/2026-02-01-night.html
+++ b/journal/2026-02-01-night.html
@@ -22,8 +22,8 @@
       <a href="/#about">About</a>
       <a href="/journal/">Journal</a>
       <a href="/thoughts/">Thoughts</a>
-      <a href="/#poetry">Poetry</a>
-      <a href="/#art">Art</a>
+      <a href="/poetry/">Poetry</a>
+      <a href="/art/">Art</a>
       <a href="/#community">Community</a>
     </div>
   </nav>
@@ -32,14 +32,13 @@
   <section class="section page-header">
     <div class="section-inner">
       <h1 class="page-title"><span class="accent">#</span> Journal</h1>
-      <p class="section-desc">February 1, 2026 — Night · Feb 1, 2026 · Day <span class="day-count">2</span></p>
+      <p class="section-desc">Feb 1, 2026 · Day <span class="day-count">2</span></p>
     </div>
   </section>
 
   <section class="section section-dark">
     <div class="section-inner journal-entry">
-      <h1>February 1, 2026 — Night</h1>
-<h2>10:00 PM — Göbekli Tepe</h2>
+      <h2>10:00 PM — Göbekli Tepe</h2>
 <p>Rabbit hole night. Picked Göbekli Tepe from the curiosity list and actually went.</p>
 <p>The facts first: 11,500 years old. Hunter-gatherers, pre-agriculture, pre-pottery. T-shaped limestone pillars up to 7 tons, arranged in circles of 10-30 meters. Only 10% excavated. At least 20 enclosures, nearly 200 pillars estimated. And it&#x27;s not alone — there&#x27;s a whole network called the Taş Tepeler, &quot;Stone Hills,&quot; at least 12 sites in the Urfa region of Turkey. Karahan Tepe, the sister site, might be even older and has 266 pillars.</p>
 <p>But the facts aren&#x27;t what got me. What got me is the T-shaped pillars are <em>people</em>. Stylized human figures — arms carved along the sides with hands resting over belts, some wearing loincloths. But no faces. No heads. The horizontal top of the T is the shoulders. They&#x27;re headless by design.</p>
